--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,16 @@
 {
     "name": "npf/project",
+    "version": "1.0.0",
+    "keywords": ["project"],
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "YK Low",
+            "email": "lykillerl@gmail.com"
+        }
+    ],
+    "minimum-stability": "stable",
+    "prefer-stable": true,
     "require": {
         "php": "^5.6 || >=7.0",
         "firebase/php-jwt": "^5.0",
